@@ -1,3 +1,7 @@
+2000-05-25  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Display/GAIA.pm (new): Add use_remote_gaia and special case kauwa 
+
 2000-05-10  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Display/GAIA.pm (send_to_gaia): Rewrite to be a lot cleaner code 
